change factoring and leasing pages

--- a/app/factoring.html
+++ b/app/factoring.html
@@ -229,22 +229,22 @@
           </div>
         </div>
         <div class="container d-none d-sm-block">
-          <div class="glass bg-light bg-opacity-10 mt-sm-n32px mt-md-n64px mt-lg-n80px rounded-pill pt-8px pt-sm-16px pt-md-24px pt-lg-32px pb-12px pb-sm-16px pb-lg-24px px-12px px-sm-24px px-md-32px px-lg-64px"
+          <div class="glass bg-light bg-opacity-10 mt-sm-n32px mt-md-n64px mt-lg-n80px rounded-pill pt-16px pt-md-24px pt-lg-32px pb-12px pb-sm-16px pb-lg-24px px-32px px-lg-64px"
             data-transfer-origin="hero-features"
             data-transfer-breakpoint="576"
             data-transfer-placement="last">
-            <div class="d-flex flex-column gap-4px gap-md-8px gap-lg-12px">
-              <div class="ms-12px ms-sm-0px">
-                <h3 class="fs-8px fs-md-14px fs-lg-16px fs-xl-20px m-0px">
+            <div class="d-flex flex-column gap-12px">
+              <div>
+                <h3 class="fs-12px fs-md-14px fs-lg-16px fs-xl-20px m-0px">
                   Преиущества
                 </h3>
               </div>
               <div class="row g-md-0px g-8px justify-content-between">
                 <div class="col-6 d-md-contents">
-                  <div class="fs-10px fs-md-12px fs-xl-16px lh-1">
-                    <span class="fs-24px fs-md-32px fs-lg-40px fs-xl-60px fw-semibold">60</span>
-                    <span class="h-md-100 d-inline-flex flex-column justify-content-center align-top">
-                      <p class="m-0px">
+                  <div class="fs-20px fs-md-14px fs-xl-20px lh-1">
+                    <span class="fs-20px fs-md-32px fs-lg-40px fs-xl-60px fw-bold fw-xl-semibold">60</span>
+                    <span class="h-md-100 d-inline-flex flex-column justify-content-center fs-10px fs-md-12px fs-lg-16px py-xl-6px align-top">
+                      <p class="fw-bold m-0px">
                         Отсрочка
                         <br>
                         платежа
@@ -253,10 +253,10 @@
                   </div>
                 </div>
                 <div class="col-6 d-md-contents">
-                  <div class="fs-10px fs-md-12px fs-xl-16px lh-1">
-                    <span class="fs-24px fs-md-32px fs-lg-40px fs-xl-60px fw-semibold">300 млн</span>
-                    <span class="h-md-100 d-inline-flex flex-column justify-content-center align-top">
-                      <p class="m-0px">
+                  <div class="fs-20px fs-md-14px fs-xl-20px lh-1">
+                    <span class="fs-20px fs-md-32px fs-lg-40px fs-xl-60px fw-bold fw-xl-semibold">300 млн</span>
+                    <span class="h-md-100 d-inline-flex flex-column justify-content-center fs-10px fs-md-12px fs-lg-16px py-xl-6px align-top">
+                      <p class="fw-bold m-0px">
                         в месяц
                         <br>
                         лимит
@@ -265,10 +265,10 @@
                   </div>
                 </div>
                 <div class="col-6 d-md-contents">
-                  <div class="fs-10px fs-md-12px fs-xl-16px lh-1">
-                    <span class="fs-24px fs-md-32px fs-lg-40px fs-xl-60px fw-semibold">2.9%</span>
-                    <span class="h-md-100 d-inline-flex flex-column justify-content-center align-top">
-                      <p class="m-0px">
+                  <div class="fs-20px fs-md-14px fs-xl-20px lh-1">
+                    <span class="fs-20px fs-md-32px fs-lg-40px fs-xl-60px fw-bold fw-xl-semibold">2.9%</span>
+                    <span class="h-md-100 d-inline-flex flex-column justify-content-center fs-10px fs-md-12px fs-lg-16px py-xl-6px align-top">
+                      <p class="fw-bold m-0px">
                         комиссия
                         <br>
                         комплексная
@@ -277,10 +277,10 @@
                   </div>
                 </div>
                 <div class="col-6 d-md-contents">
-                  <div class="fs-10px fs-md-12px fs-xl-16px lh-1">
-                    <span class="fs-24px fs-md-32px fs-lg-40px fs-xl-60px fw-semibold">4.7%</span>
-                    <span class="h-md-100 d-inline-flex flex-column justify-content-center align-top">
-                      <p class="m-0px">
+                  <div class="fs-20px fs-md-14px fs-xl-20px lh-1">
+                    <span class="fs-20px fs-md-32px fs-lg-40px fs-xl-60px fw-bold fw-xl-semibold">4.7%</span>
+                    <span class="h-md-100 d-inline-flex flex-column justify-content-center fs-10px fs-md-12px fs-lg-16px py-xl-6px align-top">
+                      <p class="fw-bold m-0px">
                         Итого общая
                         <br>
                         комиссия
