--- a/app/leasing.html
+++ b/app/leasing.html
@@ -229,75 +229,74 @@
           </div>
         </div>
         <div class="container d-none d-sm-block">
-          <div class="glass bg-light bg-opacity-10 mt-sm-n32px mt-md-n64px mt-lg-n80px rounded-pill pt-8px pt-sm-16px pt-md-24px pt-lg-32px pb-12px pb-sm-16px pb-lg-24px px-12px px-sm-24px px-md-48px px-lg-64px"
+          <div class="glass bg-light bg-opacity-10 mt-sm-n32px mt-md-n64px mt-lg-n80px rounded-pill pt-16px pt-md-24px pt-lg-32px pb-12px pb-sm-16px pb-lg-24px px-32px px-lg-64px"
             data-transfer-origin="hero-features"
             data-transfer-breakpoint="576"
             data-transfer-placement="last">
-            <div class="d-flex flex-column gap-4px gap-md-8px gap-lg-12px">
-              <div class="ms-12px ms-sm-0px">
+            <div class="d-flex flex-column gap-12px">
+              <div>
                 <h3 class="fs-12px fs-md-14px fs-lg-16px fs-xl-20px m-0px">
                   Условия лизинга
                 </h3>
               </div>
               <div class="row g-md-0px g-8px justify-content-between">
                 <div class="col-6 d-md-contents">
-                  <div class="fs-10px fs-md-12px fs-xl-16px lh-1">
-                    <span>
+                  <div class="fs-20px fs-md-14px fs-xl-20px lh-1">
+                    <span class="fw-semibold fw-md-bold">
                       от
                     </span>
-                    <span class="fs-24px fs-md-32px fs-lg-40px fs-xl-60px fw-semibold">10</span>
-                    <span class="h-md-100 d-inline-flex flex-column justify-content-between py-2px py-md-6px align-top">
-                      <p class="fs-10px fs-md-12px fs-lg-14px fs-xl-20px fw-bold m-0px">
+                    <span class="fs-20px fs-md-32px fs-lg-40px fs-xl-60px fw-bold fw-xl-semibold">10</span>
+                    <span class="h-md-100 d-inline-flex flex-column justify-content-between fs-10px fs-md-12px fs-lg-16px py-xl-6px align-top">
+                      <p class="fw-bold m-0px">
                         %
                       </p>
-                      <p class="m-0px">
+                      <p class="fw-medium m-0px">
                         Аванс
                       </p>
                     </span>
                   </div>
                 </div>
                 <div class="col-6 d-md-contents">
-                  <div class="fs-10px fs-md-12px fs-xl-16px lh-1">
-                    <span class="fs-24px fs-md-32px fs-lg-40px fs-xl-60px fw-semibold">6-36</span>
-                    <span class="h-md-100 d-inline-flex flex-column justify-content-between py-2px py-md-6px align-top">
-                      <p class="fs-10px fs-md-12px fs-lg-14px fs-xl-20px fw-bold m-0px">
+                  <div class="fs-20px fs-md-14px fs-xl-20px lh-1">
+                    <span class="fs-20px fs-md-32px fs-lg-40px fs-xl-60px fw-bold fw-xl-semibold">6-36</span>
+                    <span class="h-md-100 d-inline-flex flex-column justify-content-between fs-10px fs-md-12px fs-lg-16px py-xl-6px align-top">
+                      <p class="fw-bold m-0px">
                         мес.
                       </p>
-                      <p class="m-0px">
+                      <p class="fw-medium m-0px">
                         Срок
                       </p>
                     </span>
                   </div>
                 </div>
                 <div class="col-6 d-md-contents">
-                  <div class="fs-10px fs-md-12px fs-xl-16px lh-1">
-                    <span>
+                  <div class="fs-20px fs-md-14px fs-xl-20px lh-1">
+                    <span class="fw-semibold fw-md-bold">
                       до
                     </span>
-                    <span class="fs-24px fs-md-32px fs-lg-40px fs-xl-60px fw-semibold">500</span>
-                    <span class="h-md-100 d-inline-flex flex-column justify-content-between py-2px py-md-6px align-top">
-                      <p class="fs-10px fs-md-12px fs-lg-14px fs-xl-20px fw-bold m-0px">
+                    <span class="fs-20px fs-md-32px fs-lg-40px fs-xl-60px fw-bold fw-xl-semibold">500</span>
+                    <span class="h-md-100 d-inline-flex flex-column justify-content-between fs-10px fs-md-12px fs-lg-16px py-xl-6px align-top">
+                      <p class="fw-bold m-0px">
                         млн ₽
                       </p>
-                      <p class="m-0px">
+                      <p class="fw-medium m-0px">
                         Сумма
                       </p>
                     </span>
                   </div>
                 </div>
                 <div class="col-6 d-md-contents">
-                  <div class="fs-10px fs-md-12px fs-xl-16px lh-1">
-                    <span class="fs-24px fs-md-32px fs-lg-40px fs-xl-60px fw-semibold">ИП</span>
-                    <span class="fs-6px fs-md-12px fs-lg-14px fs-xl-20px fw-bold">
+                  <div class="fs-20px fs-md-14px fs-xl-20px lh-1">
+                    <span class="fs-20px fs-md-32px fs-lg-40px fs-xl-60px fw-bold fw-xl-semibold">ИП</span>
+                    <span class="fw-semibold fw-md-bold">
                       и
                     </span>
-                    <span class="fs-24px fs-md-32px fs-lg-40px fs-xl-60px fw-semibold">ЮЛ</span>
-                    <span class="h-md-100 d-inline-flex flex-column justify-content-between py-2px py-md-6px align-top">
-                      <p class="fs-10px fs-md-12px fs-lg-14px fs-xl-20px fw-bold m-0px">
-                        на ОСН
-                      </p>
-                      <p class="m-0px">
-                        Для кого
+                    <span class="fs-20px fs-md-32px fs-lg-40px fs-xl-60px fw-bold fw-xl-semibold">ЮЛ</span>
+                    <span class="h-md-100 d-inline-flex flex-column justify-content-between fs-10px fs-md-12px fs-lg-16px py-xl-6px align-top">
+                      <p class="fw-bold m-0px">
+                        на
+                        <br class="d-lg-none">
+                        ОСН
                       </p>
                     </span>
                   </div>
@@ -1442,98 +1441,100 @@
 
             <div class="d-flex flex-column gap-lg-40px gap-20px">
               <div class="row g-4px g-md-0px flex-md-nowrap justify-content-md-between gap-md-8px">
-                <div class="col-4 d-md-contents">
-                  <div class="glass mw-240px w-100 h-100 h-md-auto bg-white bg-opacity-10 rounded-12px py-12px py-md-20px py-lg-24px px-4px px-md-16px px-lg-20px">
-                    <div class="d-flex flex-column gap-8px gap-md-16px gap-lg-24px">
-                      <span class="icon w-20px w-md-40px h-20px h-lg-40px">
+                <div class="col-md-4 d-md-contents">
+                  <div class="glass mw-md-240px w-100 h-100 h-md-auto bg-white bg-opacity-10 rounded-12px py-14px py-md-20px py-lg-24px px-12px px-md-16px px-lg-20px">
+                    <div class="d-flex flex-row-reverse flex-md-column align-items-center align-items-md-stretch gap-8px gap-md-16px gap-lg-24px">
+                      <span class="icon w-32px w-md-40px h-32px h-lg-40px">
                         <svg>
-                          <use xlink:href="img/icons/sale.svg#svg-sale"></use>
+                          <use xlink:href="img/icons/chat.svg#svg-chat"></use>
                         </svg>
                       </span>
-                      <p class="fs-12px fs-md-14px text-gray-500 m-0px">
-                        Шаг 1
-                      </p>
-                      <h3 class="fs-12px fs-md-14px fs-lg-16px fw-bold lh-normal m-0px">
-                        Отправьте
-                        <br>
-                        заявку
-                      </h3>
+                      <div class="flex-fill d-flex flex-column gap-md-16px gap-lg-24px">
+                        <p class="fs-12px fs-md-14px text-gray-500 m-0px">
+                          Шаг 1
+                        </p>
+                        <h3 class="fs-12px fs-md-14px fs-lg-16px fw-bold lh-normal m-0px">
+                          Отправьте
+                          <br class="d-none d-md-inline">
+                          заявку
+                        </h3>
+                      </div>
                     </div>
                   </div>
                 </div>
-                <div class="col-4 d-md-contents">
-                  <div class="glass mw-240px w-100 h-100 h-md-auto bg-white bg-opacity-10 rounded-12px py-12px py-md-20px py-lg-24px px-4px px-md-16px px-lg-20px">
-                    <div class="d-flex flex-column gap-8px gap-md-16px gap-lg-24px">
-                      <span class="icon w-20px w-md-40px h-20px h-lg-40px">
+                <div class="col-md-4 d-md-contents">
+                  <div class="glass mw-md-240px w-100 h-100 h-md-auto bg-white bg-opacity-10 rounded-12px py-14px py-md-20px py-lg-24px px-12px px-md-16px px-lg-20px">
+                    <div class="d-flex flex-row-reverse flex-md-column align-items-center align-items-md-stretch gap-8px gap-md-16px gap-lg-24px">
+                      <span class="icon w-32px w-md-40px h-32px h-lg-40px">
                         <svg>
                           <use xlink:href="img/icons/calendar.svg#svg-calendar"></use>
                         </svg>
                       </span>
-                      <p class="fs-12px fs-md-14px text-gray-500 m-0px">
-                        Шаг 2
-                      </p>
-                      <h3 class="fs-12px fs-md-14px fs-lg-16px fw-bold lh-normal m-0px">
-                        Дождитесь одобрения и&nbsp;получите коммерческое предложение
-                      </h3>
+                      <div class="flex-fill d-flex flex-column gap-md-16px gap-lg-24px">
+                        <p class="fs-12px fs-md-14px text-gray-500 m-0px">
+                          Шаг 2
+                        </p>
+                        <h3 class="fs-12px fs-md-14px fs-lg-16px fw-bold lh-normal m-0px">
+                          Дождитесь одобрения и&nbsp;получите коммерческое предложение
+                        </h3>
+                      </div>
                     </div>
                   </div>
                 </div>
-                <div class="col-4 d-md-contents">
-                  <div class="glass mw-240px w-100 h-100 h-md-auto bg-white bg-opacity-10 rounded-12px py-12px py-md-20px py-lg-24px px-4px px-md-16px px-lg-20px">
-                    <div class="d-flex flex-column gap-8px gap-md-16px gap-lg-24px">
-                      <span class="icon w-20px w-md-40px h-20px h-lg-40px">
+                <div class="col-md-4 d-md-contents">
+                  <div class="glass mw-md-240px w-100 h-100 h-md-auto bg-white bg-opacity-10 rounded-12px py-14px py-md-20px py-lg-24px px-12px px-md-16px px-lg-20px">
+                    <div class="d-flex flex-row-reverse flex-md-column align-items-center align-items-md-stretch gap-8px gap-md-16px gap-lg-24px">
+                      <span class="icon w-32px w-md-40px h-32px h-lg-40px">
                         <svg>
-                          <use xlink:href="img/icons/rubles.svg#svg-rubles"></use>
+                          <use xlink:href="img/icons/docs.svg#svg-docs"></use>
                         </svg>
                       </span>
-                      <p class="fs-12px fs-md-14px text-gray-500 m-0px">
-                        Шаг 3
-                      </p>
-                      <h3 class="fs-12px fs-md-14px fs-lg-16px fw-bold lh-normal m-0px">
-                        Подготовьте
-                        <br>
-                        документы
-                      </h3>
+                      <div class="flex-fill d-flex flex-column gap-md-16px gap-lg-24px">
+                        <p class="fs-12px fs-md-14px text-gray-500 m-0px">
+                          Шаг 3
+                        </p>
+                        <h3 class="fs-12px fs-md-14px fs-lg-16px fw-bold lh-normal m-0px">
+                          Подготовьте документы
+                        </h3>
+                      </div>
                     </div>
                   </div>
                 </div>
-                <div class="col-4 d-md-contents">
-                  <div class="glass mw-240px w-100 h-100 h-md-auto bg-white bg-opacity-10 rounded-12px py-12px py-md-20px py-lg-24px px-4px px-md-16px px-lg-20px">
-                    <div class="d-flex flex-column gap-8px gap-md-16px gap-lg-24px">
-                      <span class="icon w-20px w-md-40px h-20px h-lg-40px">
+                <div class="col-md-4 d-md-contents">
+                  <div class="glass mw-md-240px w-100 h-100 h-md-auto bg-white bg-opacity-10 rounded-12px py-14px py-md-20px py-lg-24px px-12px px-md-16px px-lg-20px">
+                    <div class="d-flex flex-row-reverse flex-md-column align-items-center align-items-md-stretch gap-8px gap-md-16px gap-lg-24px">
+                      <span class="icon w-32px w-md-40px h-32px h-lg-40px">
                         <svg>
-                          <use xlink:href="img/icons/profit.svg#svg-profit"></use>
+                          <use xlink:href="img/icons/money.svg#svg-money"></use>
                         </svg>
                       </span>
-                      <p class="fs-12px fs-md-14px text-gray-500 m-0px">
-                        Шаг 4
-                      </p>
-                      <h3 class="fs-12px fs-md-14px fs-lg-16px fw-bold lh-normal m-0px">
-                        Внесите
-                        <br>
-                        авансовый
-                        <br>
-                        платеж
-                      </h3>
+                      <div class="flex-fill d-flex flex-column gap-md-16px gap-lg-24px">
+                        <p class="fs-12px fs-md-14px text-gray-500 m-0px">
+                          Шаг 4
+                        </p>
+                        <h3 class="fs-12px fs-md-14px fs-lg-16px fw-bold lh-normal m-0px">
+                          Внесите авансовый платеж
+                        </h3>
+                      </div>
                     </div>
                   </div>
                 </div>
-                <div class="col-4 d-md-contents">
-                  <div class="glass mw-240px w-100 h-100 h-md-auto bg-white bg-opacity-10 rounded-12px py-12px py-md-20px py-lg-24px px-4px px-md-16px px-lg-20px">
-                    <div class="d-flex flex-column gap-8px gap-md-16px gap-lg-24px">
-                      <span class="icon w-20px w-md-40px h-20px h-lg-40px">
+                <div class="col-md-4 d-md-contents">
+                  <div class="glass mw-md-240px w-100 h-100 h-md-auto bg-white bg-opacity-10 rounded-12px py-14px py-md-20px py-lg-24px px-12px px-md-16px px-lg-20px">
+                    <div class="d-flex flex-row-reverse flex-md-column align-items-center align-items-md-stretch gap-8px gap-md-16px gap-lg-24px">
+                      <span class="icon w-32px w-md-40px h-32px h-lg-40px">
                         <svg>
-                          <use xlink:href="img/icons/profit.svg#svg-profit"></use>
+                          <use xlink:href="img/icons/equip.svg#svg-equip"></use>
                         </svg>
                       </span>
-                      <p class="fs-12px fs-md-14px text-gray-500 m-0px">
-                        Шаг 5
-                      </p>
-                      <h3 class="fs-12px fs-md-14px fs-lg-16px fw-bold lh-normal m-0px">
-                        Получите
-                        <br>
-                        оборудование
-                      </h3>
+                      <div class="flex-fill d-flex flex-column gap-md-16px gap-lg-24px">
+                        <p class="fs-12px fs-md-14px text-gray-500 m-0px">
+                          Шаг 5
+                        </p>
+                        <h3 class="fs-12px fs-md-14px fs-lg-16px fw-bold lh-normal m-0px">
+                          Получите оборудование
+                        </h3>
+                      </div>
                     </div>
                   </div>
                 </div>
